--- a/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
@@ -224,3 +224,28 @@
 
   }
   
+
+  .dodan-u-kosaricu-zatvori-div{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgb(177, 224, 160);
+    padding: 40px;
+    color: black;
+    border-radius: 30px;
+  }
+
+  .dodan-u-kosaricu-zatvori-div button{
+    background-color: rgb(85, 85, 85,0.2);
+    
+    border: none;
+    border-radius: 30px;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    padding: 10px;
+  }
