doradila css, dodala mogucnost spremanja ponuda i popust i da se obavijesti kupca

--- a/IzvorniKod/mojKvart/frontend/src/styles/MojePonudeiPromocije.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/MojePonudeiPromocije.css
@@ -53,6 +53,8 @@
     padding: 40px;
     color: black;
     border-radius: 30px;
+    width: 450px;
+    height: 200px;
 }
 .moje-ponude-popusti-zatvori-div button{
     background-color: rgb(85, 85, 85,0.2);
