--- a/IzvorniKod/mojKvart/frontend/src/styles/MojeRecenzije.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/MojeRecenzije.css
@@ -49,7 +49,7 @@ body {
     display: flex;
     flex-direction: column;
     color:rgb(0, 0, 0, 0.6);
-    padding: 15px;
+    gap: 10px;
 
   }
 
@@ -65,6 +65,7 @@ body {
   .stupac-recenzija:nth-child(2) div p{
     font-size: 15px;
     box-sizing: border-box;
+    margin-bottom: 0px;
   }
   #odebrenotekst{
     width: 100%;
@@ -73,10 +74,15 @@ body {
 
   
    
-  #odobrenotekst-recenzija{
+  #odobrenotekst{
     color: rgba(40, 134, 33,0.8) ;
     font-weight: 400;
     
+  }
+  #nije-odebrenotekst{
+    width: 100%;
+    color: rgb(213, 55, 55) ;
+    font-weight: 400;
   }
 
   #recenzija-opisIOdgovor div:nth-child(2) {
@@ -184,6 +190,8 @@ body {
         align-items: center;
         justify-content: flex-start;
         gap: 10px;
+
+
       }
       
       .stupac-recenzija:nth-child(2){
@@ -200,4 +208,20 @@ body {
        width: auto;
     }
     
+}
+
+.star-rating {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.star {
+  font-size: 1.5rem; /* Veličina zvjezdica */
+  color: #ccc; /* Boja neobojenih zvjezdica */
+  margin-right: 3px; /* Razmak između zvjezdica */
+}
+
+.star.filled {
+  color: #ffc107; /* Boja obojenih zvjezdica (npr. zlatna) */
 }
