--- a/IzvorniKod/mojKvart/frontend/src/styles/MojiRacuni.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/MojiRacuni.css
@@ -99,12 +99,6 @@ body {
     background-color: #45a049; 
     color: white;
 }
-
-.ispisRacuna {
-    margin-top: 10px;
-    padding-top: 10px;
-}
-
 .ostavljanje-recenzije-container{
     margin: 10px;
     display: flex;
@@ -114,12 +108,46 @@ body {
     background-color:rgb(69, 160, 73,0.5) ;
     border-radius: 30px;
 }
-.ostavljanje-recenzije-container p{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 10px;
-    font-size: 24px;
+.ostavljanje-recenzije-container form div {
+    display: flex;
+    flex-direction: column;
 }
+.ostavljanje-recenzije-container label {
+    color:  rgb(0, 0, 0,0.6);
+}
+.ostavljanje-recenzije-container input {
+    background-color:  rgb(0, 0, 0,0.1);
+    border-radius: 30px;
+    border-style: none;
+    padding: 3px;
+}
+.ostavljanje-recenzije-container button{
+    width: 100%;
+
+    padding: 5px 10px;
+    background-color:  rgb(0, 0, 0,0.1);
+    color:  rgb(0, 0, 0,0.6);
+    
+    border-style: solid;
+    border-width: 2px; 
+    border-color: #4caf50;
+    border-radius: 20px; 
+    cursor: pointer; 
+    transition: background-color 0.3s ease; 
+}
+.ostavljanje-recenzije-container button:hover{
+    background-color: #45a049; 
+    color: white;
+}
+
+.ispisRacuna {
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+
+
+
 
 
 
@@ -130,27 +158,14 @@ body {
     gap: 10px;
 
 }
-.ostavljanje-recenzije-container form div {
-    display: flex;
-    flex-direction: row;
-}
-.ostavljanje-recenzije-container label {
-    color:  rgb(0, 0, 0,0.6);
-    width: 20%;
-}
+
 form-buttons  {
     padding-left: 30px;
 }
 #tekstrecenzija-mojiracuni{
     min-width: 50%;
 }
-.ostavljanje-recenzije-container input {
-    background-color:  rgb(0, 0, 0,0.1);
-    width: 20%;
-    border-radius: 30px;
-    border-style: none;
-    padding: 3px;
-}
+
 
 
 /*respozivnost*/
@@ -199,4 +214,28 @@ form-buttons  {
         padding-top: 0;
         margin-top: 15px;
     }
+}
+
+
+/* Stilovi za zvjezdice */
+.star-rating {
+    display: flex;
+    flex-direction: row !important;
+}
+
+.star {
+    font-size: 2rem;
+    color: #ccc; /* Neobojane zvjezdice */
+    cursor: pointer;
+    transition: color 200ms;
+    margin-right: 5px;
+}
+
+.star.filled {
+    color: #ffc107; /* Boja obojenih zvjezdica */
+}
+
+.star:focus {
+    outline: none;
+    color: #ffc107;
 }
