registracija moderatora radi, popravljen neki slučajno obrisani css, searchbar radi samo za verificirane trgovine i proizvode

--- a/IzvorniKod/mojKvart/frontend/src/styles/home.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/home.css
@@ -190,6 +190,22 @@ body {
   width: 100%;
 }
 
+#addProduct {
+  background-color: #2c8c2c;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-family: Raleway, sans-serif;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#addProduct:hover {
+  background-color: rgba(62, 152, 30);
+}
+
 @media (max-width: 768px) {
   .shop-product-row-alt {
       flex-direction: column;
