--- a/IzvorniKod/mojKvart/frontend/src/styles/PonudeiPromocije.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/PonudeiPromocije.css
@@ -157,7 +157,6 @@
     gap: 20px;
   }
 
-  /* ovo mozda fali  */
   .row-shops{ 
     flex-direction: column;
     align-items: center;
@@ -181,5 +180,21 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+  .popust-actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10%;
+    padding-bottom: 20px;
+  }
+
+  .save-button {
+    height:45px;
+    border-radius: 7px;
+    padding-inline: 20px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s;
   }
 }
