--- a/IzvorniKod/mojKvart/frontend/src/styles/Shop.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Shop.css
@@ -157,6 +157,7 @@ a:hover {
 @media (max-width: 1000px) {
   .shop-product-row {
       flex-direction: column;
+      align-items: center;
   }
 
   .shop-info {
