--- a/IzvorniKod/mojKvart/frontend/src/styles/popisTrgovina.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/popisTrgovina.css
@@ -87,7 +87,7 @@
 }
 
 .shop-card:hover {
-  border: 5px solid yellowgreen;
+  border: 5px solid  #28a745;;
 }
 
 .shop-card img {
@@ -155,18 +155,18 @@
 }
 
 .filters > button {
-  background-color: rgba(50, 49, 49, 0.70); 
+  background-color:  #28a745;
   color: white; 
   width: 90%;
-  padding: 5px 10px; 
+  padding: 7px 10px; 
   font-family: Raleway, sans-serif;
   border-radius: 20px; 
   margin-bottom: 10px;
+  border: none;
 }
 
 .filters > button:hover {
-  background-color:rgba(62, 152, 30, 0.80); 
-  border-color: rgba(59, 145, 28, 0.8); 
+  background-color: #218838;
 }
 
 .filterPopovers {
