--- a/IzvorniKod/mojKvart/frontend/src/styles/MojiRacuni.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/MojiRacuni.css
@@ -21,6 +21,10 @@
 .main-container{
     background-color: #ededed;
 }
+.idracun-button{
+    text-align: start;
+    padding: 10px;
+}
 
 
 body {
@@ -83,8 +87,11 @@ body {
 
 .racun-ostavi-recenziju-gumb {
     width: 100%;
-
-    padding: 5px 10px;
+    text-align: start;
+    padding-left: 15px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     background-color:#ffffff ; 
     color: black; 
     border-style: solid;
