--- a/IzvorniKod/mojKvart/frontend/src/styles/NavBar.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/NavBar.css
@@ -128,58 +128,108 @@ form .btn:focus {
 
 @media (max-width: 1050px) {
 
+  #vanjski{
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+  }
+ 
   #unutarnji {
-    display: flex;
-    flex-wrap: wrap; 
-    align-items: center;
-    gap: 10px; 
-    padding: 10px 15px;
+    display: grid !important;
+    grid-template-columns: auto auto;
+    grid-auto-rows: auto;
+    gap: 20px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
   }
 
-  #logo {
-    flex: 1 1 100%; 
-    display: flex;
-    justify-content: left;
-    max-width: 150px; 
+  #logo{
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
 
   #searchdiv {
-    flex: 1 1 100%;
-    display: flex;
-    justify-content: center;
     margin-top: 10px;
-  }
-
-  #searchdiv input { 
-    padding-left: 10px;
-  }
-
-  #searchdiv .btn {
-    padding: 0 20px; 
-    margin-left: 5px;
-    font-size: 16px; 
-  }
-
-  #obruc {
-    flex: 1 1 100%; 
-    display: flex;
-    justify-content: left;
-    gap: 15px; 
-    margin-top: 10px;
-  }
-
-  #MojRacun, #OdjaviSe {
-    padding: 5px;
-    text-align: center;
-    border:none;
-  }
-
-  #kosarica {
-    width: 30px; 
-    height: 30px;
+    width: 100%;
+    margin-bottom: 15px;
+    grid-column: 1 / 3;
   }
 
   #drugiNav{
-    padding-left: 25px;
+    margin-top: 0px;
+    padding-top: 0px;
+  }
+
+
+  #obruc{
+    width: 100%;
+    justify-content: flex-end; 
+    margin-left: 0; 
+    padding-left: 0; 
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
+  #MojRacun, #kosarica, #OdjaviSe{
+    margin-left: 0; 
+    padding-left: 0px; 
+  }
+
+  #MojRacun {
+    font-weight: 400; 
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+  #searchdiv {
+    width: 100%;
+    justify-content: center;
+    margin-left: 0;
+  }
+
+  #drugiNavLista {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 100%;
+      text-align: left;
+      padding-left: 20px;
+      padding-right: 0;
+      margin-top: 0px;
+      padding-top: 0px;
+  }
+
+  .nav-item {
+      width: 100%;
+      text-align: left;
+  }
+
+
+  .nav-link {
+      width: 100%;
+      padding: 10px 0;
+      text-align: left;
+      font-weight: 300; 
+  }
+}
+
+
+
+@media(max-width: 555px) {
+  #unutarnji{
+    margin-top:20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+    border-radius: 0; 
+    display: flex !important;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center !important;
+  }
+
+  #obruc{
+    justify-content: center;
   }
 }
