viteconfig popravljen za deploy

--- a/IzvorniKod/mojKvart/frontend/src/styles/Signup.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Signup.css
@@ -118,6 +118,13 @@
     margin-bottom: 15px;
 }
 
+.registration-type{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .toggle-password-button-signup{
     
         margin-bottom: 15px !important;
